--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -611,6 +611,9 @@ body {
     .cls-62 {
         fill: #94edad;
     }
+    .cls-67{
+        fill:#F2F2F2;
+    }
     .desk_tablet_screen {
         transition: fill 250ms ease-in-out;
         fill: rgb(3, 28, 53);
@@ -669,6 +672,66 @@ body {
     }
     .svg_btn {
         cursor: crosshair;
+    }
+}
+.design_table {
+    .cls-1 {
+        fill: #0ac;
+    }
+    .cls-1,
+    .cls-2,
+    .cls-3,
+    .cls-4,
+    .cls-5,
+    .cls-6,
+    .cls-8,
+    .cls-9 {
+        opacity: 0.5;
+    }
+
+    .cls-2 {
+        fill: #6161d1;
+    }
+
+    .cls-3 {
+        fill: #ea82f9;
+    }
+
+    .cls-4 {
+        fill: #f79b16;
+    }
+
+    .cls-5 {
+        fill: #aae8f9;
+    }
+
+    .cls-6 {
+        fill: #e5c528;
+    }
+
+    .cls-7 {
+        fill: var(--bgC_C_T);
+    }
+
+    .cls-8 {
+        fill: #38166d;
+    }
+
+    .cls-9 {
+        fill: #94edad;
+    }
+}
+.dev_table {
+    .cls-1 {
+        fill: #0ac;
+    }
+
+    .cls-2 {
+        fill: #6161d1;
+    }
+
+    .cls-3 {
+        fill: #a6a6a6;
     }
 }
 .desk_icon_container {
@@ -1427,22 +1490,29 @@ body {
     }
 }
 .service_card {
-    height: 20rem;
+    height: 35rem;
     .info_card {
-        @include flexDirection(column, flex-start, center);
-        background: var(--bgC_UT);
         width: 100%;
-        height: 100%;
+        height: 15rem;
         .title {
             width: 100%;
             color: var(--TC);
             font-size: var(--FS_L);
             transition: var(--T_M);
             text-align: inherit;
+            margin-bottom: 1rem;
         }
         .info {
             transition: var(--T_M);
             font-size: var(--FS_N);
+        }
+    }
+    .icon_container {
+        width: fit-content;
+        height: 20rem;
+        .icon_svg {
+            width: auto;
+            height: 100%;
         }
     }
 }
