fix --> imprube hot cards container grid

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1597,6 +1597,7 @@ body P {
 
 .cards_hot_container {
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  gap: 1rem;
 }
 
 .cards_portfolio_container {
@@ -2062,7 +2063,6 @@ body P {
 .section_content {
   min-height: calc(100vh - var(--NVH));
   min-height: var(--FS_NVH);
-  padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -2225,12 +2225,9 @@ body P {
   animation: zoom 1000ms ease-out;
 }
 
-.contact_section {
-  padding: 0 2rem;
-}
 .contact_section .form {
-  width: calc(100% - 4rem);
-  min-width: 260px;
+  max-width: 800px;
+  width: 100%;
 }
 .contact_section .bg_section {
   background: var(--bgHeaderSectionContact);
@@ -2501,9 +2498,9 @@ body P {
   fill: var(--TC_C);
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 720px) {
   .cards_hot_container {
-    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   }
   .flex_responsive {
     display: flex;
@@ -2519,6 +2516,9 @@ body P {
   }
 }
 @media screen and (min-width: 900px) {
+  .cards_hot_container {
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+  }
   .flex_responsive {
     flex-direction: row;
   }
