refactorig --> formating svg's with svgOMG

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1043,18 +1043,7 @@ body {
 }
 .node_icon_svg {
     .cls-1 {
-        fill: #689f63;
-    }
-    .cls-2,
-    .cls-4 {
-        fill: #689f63;
-    }
-    .cls-3 {
-        fill: var(--vueIconText);
-    }
-    .cls-3,
-    .cls-4 {
-        fill-rule: evenodd;
+        fill: #539e43;
     }
 }
 .react_icon_svg {
