--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1008,7 +1008,7 @@ body {
     }
 }
 .js_icon_svg {
-    transform: scale(0.7);
+    transform: scale(0.8);
     .cls-1 {
         fill: #f7df1e;
     }
@@ -2248,7 +2248,7 @@ body {
     padding: 1rem;
     .skill_name {
         color: var(--TC);
-        font-size: var(--fontSizeSClamp);
+        font-size: var(--FS_N);
         line-height: 1;
         text-align: center;
         width: 100%;
