--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1094,8 +1094,11 @@ body P {
 .bio_bubble {
   top: 0;
   left: 0;
-  gap: 1rem;
   overflow: hidden;
+}
+.rex_bubble .info,
+.bio_bubble .info {
+  margin-top: 1rem;
 }
 
 .rex_bubble .header_bubble {
@@ -1116,13 +1119,8 @@ body P {
 }
 
 .info_bubble {
-  top: 0;
-  left: 0;
   padding: 1rem;
-  gap: 1rem;
-}
-.info_bubble .header_bubble {
-  background: url(../img/backgrounds/graffitiSmall.png);
+  gap: 0.5rem;
 }
 
 .btn {
@@ -2205,6 +2203,7 @@ body P {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  gap: 0.5rem;
   color: var(--TC_C);
   padding: 1rem;
   max-width: 200px;
@@ -2220,6 +2219,23 @@ body P {
   align-items: center;
 }
 
+.certification_badge {
+  height: 230px;
+  justify-content: space-between;
+}
+.certification_badge .link {
+  color: var(--FC);
+  border: solid 2px var(--FC);
+  width: 100%;
+  border-radius: 0.5rem;
+  text-align: center;
+  font-weight: 600;
+}
+.certification_badge .link:hover, .certification_badge .link:active, .certification_badge .link:focus {
+  background: var(--FC);
+  color: var(--whiteOff);
+}
+
 .skills_section .skills_icon_container {
   margin-top: 2rem;
 }
@@ -2228,7 +2244,10 @@ body P {
   width: 8rem;
 }
 
-.certification_badge .icon_container {
+.certification_badge .medal_icon .cls-1 {
+  fill: var(--TC);
+}
+.certification_badge .medal_icon .cls-2 {
   fill: rgb(140, 137, 42);
 }
 
